support videos,audios,documents,apks,zips,fix bug

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,31 +31,31 @@
             <!-- 菜单区域 -->
             <div class="menu">
                 <div class="menu-title">分类</div>
-                <div class="menu-item active">
+                <div id="menu-images" class="menu-item active">
                     <i class="fas fa-images"></i>
                     <span>图片</span>
                 </div>
-                <div class="menu-item">
+                <div id="menu-videos" class="menu-item">
                     <i class="fas fa-film"></i>
                     <span>视频</span>
                 </div>
-                <div class="menu-item">
+                <div id="menu-audios" class="menu-item">
                     <i class="fas fa-music"></i>
                     <span>音频</span>
                 </div>
-                <div class="menu-item">
+                <div id="menu-documents" class="menu-item">
                     <i class="fas fa-file-alt"></i>
                     <span>文档</span>
                 </div>
-                <div class="menu-item">
+                <div id="menu-apk" class="menu-item">
                     <i class="fas fa-cube"></i>
                     <span>安装包</span>
                 </div>
-                <div class="menu-item">
+                <div id="menu-archives" class="menu-item">
                     <i class="fas fa-file-archive"></i>
                     <span>压缩包</span>
                 </div>
-                <div class="menu-item">
+                <div id="menu-file-manager" class="menu-item">
                     <i class="fas fa-folder"></i>
                     <span>文件管理</span>
                 </div>
