--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,14 @@
                 </div>
             </div>
 
+              <!-- 路径导航栏 -->
+            <div class="path-bar" id="pathBar">
+                <div class="path-item" data-path="/">
+                    <i class="fas fa-home"></i>
+                    <span>主目录</span>
+                </div>
+            </div>
+
             <!-- 文件区域 - 宫格视图 -->
             <div class="files-container">
                 <div class="grid-view active" id="gridView">
