完善需要的命令adb和ffmpeg（Windows，MacOS，Linux）

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,13 +17,13 @@
                     <div class="phone-icon">
                         <img id="phone-cover" width="40px" height="80px">
                     </div>
-                    <div class="device-name">Xiaomi 12 Pro</div>
+                    <div class="device-name">--</div>
                 </div>
                 <div class="device-status">
-                    <div class="storage">128GB 可用 / 256GB</div>
+                    <div class="storage">--</div>
                     <div class="battery">
                         <div class="battery-level" id="battery-level"></div>
-                        <span id="battery-text">78%</span>
+                        <span id="battery-text">--</span>
                     </div>
                 </div>
             </div>
